--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BravsCalc - Oka Manchi lekkalodu 🌌</title>
+    <title>BRVOS-Calc - Oka Manchi lekkalodu 🌌</title>
 
     <!-- Google Fonts: Orbitron for a futuristic, techy feel -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet" />
@@ -111,8 +111,8 @@
 </head>
 <body>
     <div class="welcome-box">
-        <h1>BravsCalc 🌌</h1>
-        <p class="caption">Speed - repu cheptha, Memory - Emo Gurthuleedu</p>
+        <h1>BRVOS-Calc 🌌</h1>
+        <p class="caption">Oka manchi Calculator ,Speed - repu cheptha, Memory - Emo Gurthuleedu</p>
         <a href="/calculator" class="cta-button">Randi raa Randi</a>
     </div>
 </body>
